# ops-transformer

./: CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  build.sh  classify_rule.yaml  install_deps.sh  version.info
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
attention/attention_update/: README.md
attention/attention_worker_scheduler/: README.md
attention/flash_attention_score/: README.md
attention/flash_attention_score_grad/: README.md
attention/fused_infer_attention_score/: README.md
attention/gather_pa_kv_cache/: README.md
attention/incre_flash_attention/: README.md
attention/kv_quant_sparse_flash_attention/: README.md
attention/lightning_indexer/: README.md
attention/mla_preprocess/: README.md
attention/mla_preprocess_v2/: README.md
attention/mla_prolog/: README.md
attention/mla_prolog_v2/: README.md
attention/mla_prolog_v3/: README.md
attention/nsa_compress/: README.md
attention/nsa_compress_attention/: README.md
attention/nsa_compress_attention_infer/: README.md
cmake/: aclnn_ops_transformer.h.in  config.cmake  custom_build.cmake  func.cmake  func_utest.cmake  obj_func.cmake  opbuild.cmake  package.cmake  rty_obj_func.cmake  symbol.cmake  ut.cmake  variables.cmake
common/: CMakeLists.txt
docs/: README.md
examples/: README.md
experimental/: CMakeLists.txt  setup.py
experimental/moe/score_normalize/: CMakeLists.txt  score_normalize.cpp
experimental/moe/score_normalize/rotary/: dtype_convert.h  moe_routing.h
experimental/moe/score_normalize/test/: test_score_normalize.py
ffn/ffn/: README.md
tests/: test_config.yaml
(+1709 files in other folders)
